intTests/test_type_errors/err035.log.good
 Loading file "err035.saw"
 Parse error at err035.saw:7:20-7:23: Unexpected `Int'
FAILED
