intTests/test_type_errors/err035.saw
//
// Too many arguments for type: records
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : { a: Int } Int = { a = 3 };
